Handle distinct only in aggregate operators